@startuml
'https://plantuml.com/class-diagram

abstract class PolicyVisualizer {
    #Agent agent
    #Policy policy
    #Environment environment

    +{abstract} byte[] visualize(VisualizationFormat format)
    +void saveToFile(Path path, VisualizationFormat format)
    +Policy getPolicy()
    +Environment getEnvironment()
}

class GridWorldVisualizer {
    +byte[] visualize(VisualizationFormat format)
    -char actionToDirection(Action action)
}

interface PolicyVisualizerFactory {
    +{abstract} Optional<PolicyVisualizer> createVisualizer(Agent agent, Policy policy, Environment environment)
}

class SimplePolicyVisualizerFactory {
    -{static} Map<Class<?>, VisualizerConstructor> CONSTRUCTORS
    +Optional<PolicyVisualizer> createVisualizer(Agent agent, Policy policy, Environment environment)
}


PolicyVisualizerFactory         <|.. SimplePolicyVisualizerFactory
SimplePolicyVisualizerFactory  .l> GridWorldVisualizer
PolicyVisualizer                <|-- GridWorldVisualizer

@enduml